--- a/src/components/ProductCard/DetailProductCard.module.css
+++ b/src/components/ProductCard/DetailProductCard.module.css
@@ -33,10 +33,24 @@
     margin-bottom: 10px;
 }
 
+.right h3 span {
+    margin-left: 10px;
+    padding: 0 20px;
+    color: var(--white);
+    background-color: var(--red);
+}
+
 .right h4 {
     color: var(--red);
-    font-size: calc(var(--font-size-heading-three) + 0.2rem);
+    font-size: var(--font-size-heading-three);
     font-weight: 300;
+    text-decoration: line-through;
+}
+
+.right .price-sale {
+    font-size: calc(var(--font-size-heading-three) + 0.2rem);
+    font-weight: 600;
+    text-decoration: none;
 }
 
 .right p {
@@ -54,16 +68,21 @@
     position: relative;
 }
 
+.title-button {
+    padding: 10px;
+    background-color: var(--white);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+}
+
 .right button {
     position: absolute;
+    padding: 10px 40px;
     right: 30px;
     bottom: 30px;
-    width: 160px;
-    height: 40px;
     border: none;
     background-color: var(--gray);
     color: var(--white);
-    font-size: var(--font-size-heading-four);
+    font-size: 1.6rem;
     cursor: pointer;
 }
 
@@ -112,6 +131,13 @@
     .right p,
     .right h3 {
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .right h3 span {
+        margin-top: 10px;
+        width: 40%;
     }
 
     .right button {
