--- a/src/components/OrderCard/OrderCard.module.css
+++ b/src/components/OrderCard/OrderCard.module.css
@@ -73,6 +73,10 @@
     font-size: 1.2rem;
 }
 
+.sale-total {
+    text-decoration: line-through;
+}
+
 @media only screen and (max-width: 1500px) {
     .info-order .info-order-action {
         width: 30%;
