--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -103,6 +103,15 @@
     color: var(--gray);
 }
 
+.box-items .product-not-found {
+    width: 100%;
+    height: 450px;
+    display: grid;
+    place-items: center;
+    color: var(--gray);
+    font-size: 1.4rem;
+}
+
 /* Responsive */
 
 @media only screen and (max-width: 1550px) {
