--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,158 +1,248 @@
-.header {
-    position: fixed;
+:root {
+    --height-header: 60px;
+}
+
+header {
     top: 0;
     width: 100%;
-    height: 70px;
-    margin: 0 auto;
-    padding: 0 100px;
-    background-color: var(--white);
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* position: fixed; */
+    z-index: 999;
+}
+
+/* LOGO */
+
+.logo {
+    width: 100%;
+    height: var(--height-header);
+    display: grid;
+    place-items: center;
+}
+
+.logo__item {
+    font-size: 2rem;
+    color: #000000;
+}
+
+/* MENU */
+.menu {
+    width: 100%;
+    height: var(--height-header);
+    display: grid;
+    place-items: center;
+}
+
+.menu__container {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* MENU CART */
+
+.menu__item--cart {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    transition: 0.2s;
-    z-index: 998;
+    gap: 20px;
+    height: 100%;
 }
 
-.logo a {
-    color: var(--gray-dark);
-    font-size: var(--font-size-header-logo);
-}
-
-.nav .logo {
-    display: none;
-}
-
-.nav ul {
-    display: flex;
-}
-
-.nav ul li a {
-    position: relative;
-    display: block;
-    margin: 0 2px;
-    padding: 8px 18px;
-    color: var(--black);
-    font-size: var(--font-size-header-a);
-    font-weight: calc(var(--font-weight-tag-a) + 300);
-    transition: 0.2s;
-    border-radius: 30px;
-}
-
-.nav ul li a:active {
-    background-color: var(--blue);
-    color: var(--white);
-}
-
-.nav ul li a:hover,
-.button-logout:hover {
-    background-color: var(--gray-dark);
-    color: var(--white);
-}
-
-.nav ul li a span {
-    width: 30px;
-    text-align: center;
-    position: absolute;
-    top: 0px;
-    background-color: red;
-    color: var(--white);
-    border-radius: 50%;
-}
-
-.button-logout {
-    font-size: var(--font-size-header-a);
-    font-weight: var(--font-weight-tag-a);
-    margin-left: 5px;
-    padding: 8px 18px;
-    border: none;
-    border-radius: 30px;
-}
-
-.icon {
-    margin-right: 5px;
-}
-
-.hamburger {
-    display: none;
-    height: fit-content;
+.menu__item--cart--icon {
     cursor: pointer;
-    padding: 3px 8px;
-    border-radius: 5px;
-    transition: 0.2s;
-    font-size: 1.8rem;
-    color: var(--gray);
+    font-size: 20px;
+    display: none;
 }
 
-.hamburger:hover {
-    background-color: var(--gray);
-    color: var(--white);
+.menu__item--cart a {
+    position: relative;
 }
 
-/* css number products in cart */
-.number {
-    z-index: 99;
+.menu__item__cart--icon {
+    height: 30px;
+    cursor: pointer;
 }
 
-@media only screen and (max-width: 1400px) {
-    .header {
-        padding: 0 20px;
+.menu__item__cart--number {
+    position: absolute;
+    font-size: 16px;
+    color: #000000;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* MENU ITEM CENTER */
+
+.menu__item--center {
+    height: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.menu__item--center nav {
+    display: flex;
+    gap: 20px;
+}
+
+.menu__item--center nav a {
+    padding: 5px;
+    position: relative;
+    color: #000000;
+    font-size: 16px;
+}
+
+.menu__item--center nav a:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    background-color: #000000;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transition: width 0.3s linear;
+}
+
+.menu__item--center nav a:hover:after {
+    width: 100%;
+}
+
+.menu__item--center--icon {
+    cursor: pointer;
+    padding: 5px;
+    font-size: 20px;
+    display: none;
+}
+
+/* MENU-ITEM-RIGHT */
+
+.menu__item--right {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.menu__item__user div {
+    display: flex;
+    gap: 20px;
+}
+
+.menu__item__user div a {
+    position: relative;
+    color: #000000;
+    padding: 5px;
+}
+
+.menu__item__user div a:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    background-color: #000000;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transition: width 0.3s linear;
+}
+
+.menu__item__user div a:hover:after {
+    width: 100%;
+}
+
+.menu__item__user button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+/* ICON SEARCH */
+.menu__item__search {
+    padding: 5px;
+    cursor: pointer;
+}
+
+.menu__item__search--icon {
+    font-size: 18px;
+}
+
+/* SEARCH BOX */
+.search__box {
+    position: absolute;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    z-index: 1000;
+}
+
+.search__box--container {
+    width: 40%;
+    height: 100%;
+}
+
+.search__box--container--header {
+    width: 100%;
+    padding: 10px 0;
+    display: flex;
+    justify-content: end;
+}
+
+.search__box--container--header--icon {
+    padding: 5px;
+    font-size: 28px;
+    cursor: pointer;
+}
+
+.search__box--container--body {
+    width: 100%;
+}
+
+@media only screen and (max-width: 700px) {
+    .logo {
+        display: none;
     }
-}
 
-@media only screen and (max-width: 1300px) {
-    .nav {
-        position: absolute;
-        left: -300px;
+    .menu {
+        position: relative;
+    }
+
+    .menu__container {
+        width: 90%;
+    }
+
+    .menu__item--cart--icon {
+        display: block;
+    }
+
+    .menu__item--center--icon {
+        display: block;
+    }
+
+    .menu__item--center {
         top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: white;
+        transition: all 0.4s;
         z-index: 999;
-        width: 280px;
-        height: 100vh;
-        background-color: var(--white);
-        transition: 0.2s;
-        box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.02);
     }
 
-    .nav.active {
+    .menu__item--center.active {
         left: 0;
     }
 
-    .nav .logo {
-        display: block;
-        height: 70px;
-        display: flex;
-        align-items: center;
-        margin-left: 30px;
+    .search__box--container {
+        width: 90%;
     }
 
-    .nav ul {
-        display: block;
-        padding: 0 20px;
-        margin-top: 30px;
-    }
-
-    .nav ul li a {
-        margin-bottom: 5px;
-        padding: 10px 15px;
-        border-radius: 5px;
-    }
-
-    .button-logout {
-        width: 100%;
-        margin-left: 0;
-        border-radius: 5px;
-    }
-
-    .hamburger {
-        display: block;
-    }
-}
-
-@media only screen and (max-width: 550px) {
-    .header {
-        padding: 0 20px;
-    }
-
-    .logo {
-        display: none;
+    .menu__item--right,
+    .menu__item__user div {
+        gap: 10px;
     }
 }
