--- a/src/components/ProductMenu/MenuProduct.module.css
+++ b/src/components/ProductMenu/MenuProduct.module.css
@@ -1,10 +1,77 @@
-.filter {
+.container {
     width: 100%;
-    font-size: 1.2rem;
-    padding: 10px;
+    padding: 20px 0;
+}
+
+.container__pc {
     display: flex;
-    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    flex-wrap: wrap;
     gap: 10px;
-    background-color: var(--white);
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+}
+
+.container__mobile {
+    display: none;
+}
+
+.container__mobile--button {
+    padding: 5px;
+    font-size: 16px;
+    background-color: transparent;
+    outline: none;
+    color: #000;
+    border: 1px solid #000;
+    cursor: pointer;
+}
+
+.container__filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    z-index: 1;
+    display: grid;
+    place-items: center;
+}
+
+.container__filter button {
+    padding: 7px;
+    font-size: 16px;
+    cursor: pointer;
+    border: 1px solid #000;
+    background-color: transparent;
+}
+
+.container__filter--body,
+.container__filter--footer {
+    width: 80%;
+}
+
+.container__filter--body--item h3 {
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.container__filter--body--item div {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.container__filter--footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 700px) {
+    .container__pc {
+        display: none;
+    }
+
+    .container__mobile {
+        display: block;
+    }
 }
