--- a/src/pages/products/Products.module.css
+++ b/src/pages/products/Products.module.css
@@ -1,34 +1,28 @@
 .container {
-    position: relative;
     width: 100%;
-    margin: 100px 0;
+    margin: 10px 0;
     padding: 0 5%;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
 }
 
 .products {
-    padding-left: 250px;
+    margin-top: 10px;
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 20px;
 }
 
 .menu {
-    position: fixed;
-    z-index: 9;
-    width: 245px;
+    width: 100%;
 }
 
 .menu-item-button {
     display: none;
 }
 
-@media only screen and (max-width: 1100px) {
+/* @media only screen and (max-width: 1100px) {
     .container {
         flex-direction: column;
         justify-content: center;
@@ -73,4 +67,4 @@
         transition: all 0.2s;
         cursor: pointer;
     }
-}
+} */
