--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -1,89 +1,55 @@
 .product {
-    position: relative;
-    background-color: var(--white);
-    width: 300px;
-    height: 450px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    transition: 0.2s;
+    width: 100%;
+    height: auto;
 }
 
-.product .sale {
-    padding: 5px 20px;
-    font-size: 1.2rem;
-    color: var(--white);
-    background-color: var(--red);
+.product__header {
+    position: relative;
+}
+
+.product__header--sale {
+    color: #fff;
+    position: absolute;
+    padding: 3px;
     top: 0;
     left: 0;
-    position: absolute;
+    background-color: #939393;
 }
 
-.image {
+.product__header--link--image {
     width: 100%;
-    height: 40%;
-    display: grid;
-    place-items: center;
 }
 
-.image img {
-    width: 100%;
-    height: 100%;
-}
-
-.information {
-    height: 40%;
-    padding: 20px 20px 40px;
+.product__body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 15px;
 }
 
-.information p {
-    font-size: 1.2rem;
-    color: var(--gray-dark);
-}
-
-.information a {
-    text-align: center;
-    color: var(--gray-dark);
-    font-size: 1.4rem;
-    font-weight: 600;
-}
-
-.information span {
-    color: var(--red);
-    font-size: 1.2rem;
-    text-decoration: line-through;
-}
-
-.information .price-sale {
-    font-size: 1.6rem;
-    font-weight: 600;
-    margin-top: 10px;
-    text-decoration: none;
-}
-
-.buy {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: all 0.2s;
-    background-color: var(--gray);
-}
-
-.buy:hover {
-    bottom: 20px;
-    background-color: var(--gray-dark);
-}
-
-.buy button {
-    padding: 10px 20px;
-    border: none;
+.product__body--button {
+    color: #282828;
     background-color: transparent;
-    color: var(--white);
-    font-size: 1.2rem;
     cursor: pointer;
+    font-size: 16px;
+    border: none;
+    display: flex;
+    top: 50%;
+    left: -40%;
+}
+
+.product__body--button span {
+    padding: 5px;
+    font-weight: 300;
+}
+
+.product__body--link {
+    margin-top: 15px;
+    color: #000;
+    font-weight: 600;
+}
+
+.product__body--sale {
+    text-decoration: line-through;
 }
