--- a/src/pages/products/Products.module.css
+++ b/src/pages/products/Products.module.css
@@ -5,66 +5,13 @@
 }
 
 .products {
-    margin-top: 10px;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 20px;
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
+    gap: 50px 20px;
 }
 
-.menu {
+.products__item {
     width: 100%;
 }
-
-.menu-item-button {
-    display: none;
-}
-
-/* @media only screen and (max-width: 1100px) {
-    .container {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .products {
-        padding-top: 60px;
-        justify-content: center;
-        padding-left: 0;
-        margin-top: 5%;
-        width: 100%;
-    }
-
-    .menu {
-        display: flex;
-        gap: 20px;
-        top: 80px;
-        left: -310px;
-        width: 400px;
-        position: fixed;
-        transition: all 0.2s;
-    }
-
-    .menu-display {
-        left: 10px;
-    }
-
-    .menu-item {
-        width: 80%;
-    }
-
-    .menu-item-button {
-        display: block;
-        height: 35px;
-        margin-top: 5px;
-        padding: 5px 7px;
-        font-size: 1.3rem;
-        background-color: var(--white);
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-        border-radius: 5px;
-        transition: all 0.2s;
-        cursor: pointer;
-    }
-} */
