--- a/src/components/ProductMenu/MenuProduct.module.css
+++ b/src/components/ProductMenu/MenuProduct.module.css
@@ -5,8 +5,7 @@
 
 .container__pc {
     display: flex;
-    align-items: start;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 10px;
 }
