--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -188,7 +188,7 @@ header {
     width: 100%;
     padding: 10px 0;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .search__box--container--header--icon {
