--- a/src/components/ProductSilder/FeaturesProduct.module.css
+++ b/src/components/ProductSilder/FeaturesProduct.module.css
@@ -1,5 +1,5 @@
 /* Slider */
-.p-slider {
+.container {
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -9,103 +9,41 @@
     gap: 20px;
 }
 
+.container--heading {
+    width: 100%;
+    color: #000;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #000;
+}
+
 .swiper {
     width: 100%;
+    position: relative;
 }
 
-.product-slider-heading {
-    width: 100%;
-    font-size: 55px;
-    word-spacing: 20px;
-    letter-spacing: 10px;
-    text-transform: capitalize;
-    color: var(--gray-dark);
+.swiper__item--button--item {
+    cursor: pointer;
+    padding: 6px;
+    font-size: 28px;
+    background-color: transparent;
+    border: none;
+    outline: none;
 }
 
-.product-box {
+.swiper__item {
+    width: 370px;
+    height: 100%;
     margin: 10px 0px 10px 10px;
-    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 400px;
-    padding: 15px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    background-color: var(--white);
 }
 
-.product-box:last-child {
+.swiper__item:last-child {
     margin-right: 10px;
 }
 
-.p-img-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    overflow: hidden;
-}
-
-.p-img a,
-.p-img {
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
-
-.p-img a img {
-    width: 100%;
-    height: 100%;
-    object-position: center;
-    object-fit: contain;
-}
-
-.p-box-text {
-    margin-top: 5px;
-    width: 100%;
-}
-
-.product-category {
-    display: flex;
-    justify-self: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.product-category span {
-    font-size: var(--font-size-heading-three);
-    text-transform: capitalize;
-    color: var(--gray);
-    margin: 5px 0;
-}
-
-.product-title {
-    color: var(--gray);
-    font-size: var(--font-size-heading-two);
-    font-weight: 600;
-}
-
-.product-title:hover {
-    color: var(--gray-dark);
-}
-
-.price-buy {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.price-buy span {
-    font-size: var(--font-size-heading-three);
-    color: var(--red);
-    font-weight: 300;
-}
-
-.price-buy .p-buy-btn {
-    font-size: var(--font-size-heading-three);
-    color: var(--gray);
-}
-
-.price-buy .p-buy-btn:hover {
-    color: var(--gray-dark);
-}
+@media only screen and (max-width: 500px) {
+    .swiper__item {
+        width: fit-content;
+    }
+} ;
