--- a/src/components/ProfileCard/ProfileCard.module.css
+++ b/src/components/ProfileCard/ProfileCard.module.css
@@ -1,88 +1,90 @@
-.card {
-    position: relative;
-    margin-top: 100px;
-    width: 400px;
-    height: 420px;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-}
-
-.card button {
-    position: absolute;
-    bottom: 20px;
-    transform: translateX(50%);
-    width: 50%;
-    padding: 10px;
-    font-size: var(--font-size-tag-p);
-    color: var(--white);
-    background-color: var(--gray);
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.card button:hover {
-    background-color: var(--gray-dark);
-}
-
-.card .card-image {
+.container {
     width: 100%;
-    height: 150px;
-    position: relative;
+    display: flex;
+    gap: 30px;
 }
 
-.card .card-image img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 4px solid var(--white);
+.container--left {
+    width: 40%;
+}
+
+.container__avatar {
+    border: 1px solid #000;
+    width: 100%;
+    min-height: 300px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.container--left img {
+    width: 100%;
     object-fit: cover;
+}
+
+.container--right {
+    width: 60%;
+    position: relative;
+}
+
+.container__information table {
+    line-height: 30px;
+    text-align: left;
+    font-size: 16px;
+}
+
+.container__information table th:first-child {
+    font-weight: 600;
+    padding-right: 20px;
+}
+
+.container__information table th {
+    font-weight: 300;
+}
+
+.container__information--title {
+    font-weight: 600;
+}
+
+.container__information--name {
+    text-transform: capitalize;
+}
+
+.container__edit {
     position: absolute;
-    top: -50%;
-    transform: translateX(50%);
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+    bottom: 0;
 }
 
-.card .card-info {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.container__edit--button {
+    cursor: pointer;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #282828;
+    border: none;
+    color: #fff;
 }
 
-.card .card-info h2,
-.card .card-info h3 {
-    color: var(--gray-dark);
-}
-
-.card .card-info p {
-    color: var(--gray);
-    font-size: var(--font-size-tag-p);
-}
-
-.card-info-order {
-    width: 100%;
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-info-order .left,
-.card-info-order .right {
-    width: 50%;
-}
-
-@media only screen and (max-width: 500px) {
-    .card {
-        width: 350px;
+@media only screen and (max-width: 850px) {
+    .container--left {
+        width: 30%;
     }
 
-    .card .card-image img {
-        width: 185px;
-        height: 185px;
+    .container--right {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .container--left {
+        width: 100%;
+    }
+
+    .container--right {
+        width: 100%;
+        height: 350px;
     }
 }
