--- a/src/components/OrderCard/OrderCard.module.css
+++ b/src/components/OrderCard/OrderCard.module.css
@@ -1,99 +1,84 @@
-.products {
-    overflow: scroll;
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
-.info-order {
-    margin-top: 20px;
+.container__table {
+    width: 100%;
+}
+
+.container__table table {
+    width: 100%;
+}
+
+.container__table table thead tr td {
+    background-color: #282828;
+    color: #fff;
+    padding: 7px;
+}
+
+.container__table table thead tr td:first-child {
+    text-align: left;
+}
+
+.container__table table thead tr td span {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 7px;
+}
+
+.container__table table tbody tr th {
+    background-color: #ddd;
+    font-weight: 300;
+    padding: 0 7px;
+    text-align: right;
+}
+
+.container__table table tbody tr th:first-child {
+    text-align: left;
+}
+
+.price__original {
+    text-decoration: line-through;
+}
+
+.price__sale {
+    color: var(--red);
+}
+
+.container__info {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
-.info-order h3,
-.info-order p {
-    color: var(--gray-dark);
-    font-size: var(--font-size-tag-p);
+.container__info__detail,
+.container__info__action {
     line-height: 30px;
 }
 
-.info-order .info-order-action {
-    width: 240px;
+.container__info__action {
+    width: 200px;
 }
 
-.info-order .info-order-action p {
-    color: var(--red);
-    font-weight: 600;
+.container__info__action--price--original {
+    text-decoration: line-through;
 }
 
-.info-order .info-order-action .method {
-    color: var(--green);
-    font-weight: 600;
-}
-
-.info-order button {
+.container__info__action button {
+    cursor: pointer;
     width: 100%;
-    margin-top: 20px;
-    background-color: var(--red);
-    color: var(--white);
+    padding: 7px;
+    font-size: 16px;
+    background-color: #282828;
+    color: #fff;
     border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    font-size: var(--font-size-tag-p);
-    cursor: pointer;
 }
 
-.info-order button:hover {
-    background-color: var(--danger);
-}
-
-.info-order button:disabled {
-    background-color: var(--secondary);
-}
-
-.action-sort {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.action-sort span {
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-.action-sort span .icon {
-    padding: 0 10px;
-}
-
-.price-original {
-    text-decoration: line-through;
-}
-
-.price-sale {
-    color: var(--red);
-    font-size: 1.2rem;
-}
-
-.sale-total {
-    text-decoration: line-through;
-}
-
-@media only screen and (max-width: 1500px) {
-    .info-order .info-order-action {
-        width: 30%;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .table-heading,
-    .table-body {
-        font-size: calc(var(--font-size-tag-p) - 0.3rem);
-    }
-
-    .info-order {
-        flex-direction: column;
-    }
-
-    .info-order .info-order-action {
-        width: 100%;
-    }
+.container__info__action button:disabled {
+    background-color: #ddd;
 }
