--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -1,10 +1,10 @@
 .container {
+    padding: 2%;
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 100px;
     gap: 50px 0;
 }
 
@@ -60,6 +60,10 @@
 }
 
 @media only screen and (max-width: 900px) {
+    .container {
+        padding: 0;
+    }
+
     .container__track--action {
         flex-direction: column;
         align-items: normal;
