--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    font-size: 14px;
 }
 
 body {
